# CY-LLM-Engine

./: .dockerignore  .gitignore  COMMIT_MESSAGE.txt  CONTRIBUTING.md  CYLLM架构图.html  DEVELOPMENT_LITE.md  ENV_SETUP_SUMMARY.md  LICENSE  MIGRATION_SUMMARY.md  PHASE2_3_UPGRADE_REPORT.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  README.md.bak  SELF_DEPLOY_COMPLETE.md  TESTING.md  TODO_ARCHITECTURE_MIGRATION.md  ai_backend.py  audit_report.md  cy  cy-llm  dependency-conflict-report.md  docker-compose.community.yml  ew  ew.bak  mypy.ini  project-baseline-snapshot.md  pyproject.toml  pytest.ini  rename_occurrences_raw.txt  requirements-base.txt  requirements-nvidia.txt  requirements-trt.txt  requirements-vllm.txt  requirements.txt  test_api.sh  test_refactor.py
.github/workflows/: ci.yml  find-ew-references.yml
.kiro/specs/cy-llm-optimization/: design.md  requirements.md  tasks.md
CY_LLM_Backend/: ARCHITECTURE.md  DEPLOY.md  TEST_SELF_DEPLOY.md  deploy_tool  files_tree.md  gradle.properties  main.py  settings.gradle.kts  test_deploy_api.sh
CY_LLM_Backend/coordinator_lite/: requirements.txt
CY_LLM_Backend/coordinator_lite/app/: server.py
CY_LLM_Backend/deploy/: .env.example  Dockerfile.coordinator  Dockerfile.gateway  Dockerfile.worker.ascend  Dockerfile.worker.nvidia  alertmanager.yml  config.json  dependency_registry.json  docker-compose.yml  models.json
CY_LLM_Backend/gateway_lite/: Dockerfile.gateway.lite  requirements.txt
CY_LLM_Backend/proto/: ai_service.proto
CY_LLM_Backend/scripts/: gen_proto.sh
CY_LLM_Backend/tests/: test_integration.py  train_sample.json
CY_LLM_Backend/training/: __init__.py  engine.py
CY_LLM_Backend/worker/: REFACTORING.py  constants.py  exceptions.py  grpc_servicer.py  grpc_servicer_async.py  main.py  requirements.txt  training_engine.py  training_servicer_grpc.py
CY_LLM_Training/: requirements
CY_LLM_Training/dialogue_gi/: settings_modified_furina.json
CY_LLM_Training/src/: README.md  inference.py  train_lora.py
EW_AI_Backend/: files_tree.md
EW_AI_Backend/deploy/: Dockerfile.gateway  Dockerfile.worker.ascend  Dockerfile.worker.nvidia  config.json  docker-compose.yml
EW_AI_Backend/gateway/: Dockerfile.gateway  README.md  build.gradle.kts
EW_AI_Backend/proto/: ai_service.proto
EW_AI_Backend/tests/: test_integration.py
EW_AI_Backend/worker/: Dockerfile.worker.ascend  Dockerfile.worker.nvidia  main.py  requirements.txt  requirements_ascend.txt
EW_AI_Training/dialogue_gi/: README.md
EW_AI_Training/src/: dataset_converter.py
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  FAQ.md  INSTALL.md  README.md  TESTING.md  TRT_GUIDE.md
docs/HISTORY/: MIGRATION_SUMMARY.md
gateway/: .gitignore  INTERFACE_CONTRACT.md  README.md  pyproject.toml
gateway/gateway_lite/: config.json  requirements.txt
gateway/gateway_lite/app/: main.py
legacy/backups/: .env.example.bak  MIGRATION_SUMMARY.md  README.md  rename_occurrences_raw.old  rename_occurrences_raw.txt
refactor/: code_standards.md  refactor_plan.md
rust_core/: ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  TESTING.md  build.rs  sidecar.toml  test_sidecar.sh
rust_core/src/: config.rs  errors.rs  grpc_service.rs  health.rs  lib.rs  metering.rs  metrics.rs  proxy.rs
rust_core/tests/: integration_test.rs
scripts/: README.md  benchmark.sh  benchmark_token_speed.py  check-ci-refs.sh  clean.sh  convert_trt.py  diagnose_env.py  e2e_lite.sh  find-ew-references.sh  generate_ssl_cert.sh  gradle-build.sh  setup-jdk.sh  verify-deploy.sh
src/cy_llm/: __init__.py
tests/: TEST_COVERAGE.md
tests/integration/: test_grpc_uds.py
tests/unit/: test_memory_manager.py  test_task_scheduler.py  test_vllm_cuda_engine_streaming.py
(+482 files in other folders)
