[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cy-llm-gateway"
version = "0.1.0"
description = "CY-LLM Gateway - Replaceable API Gateway (Python FastAPI)"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "grpcio>=1.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]
