[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"
authors = ["CY-LLM Team"]
description = "Rust Sidecar for Python Worker - Data Plane Proxy"
license = "Apache-2.0"

[lib]
name = "rust_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sidecar"
path = "src/bin/sidecar.rs"

[dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["codec"] }

# gRPC (简化版本，无 TLS)
tonic = "0.11"
prost = "0.12"
tower = { version = "0.4", features = ["timeout", "buffer"] }

# Metrics (本地导出)
prometheus = "0.13"

# HTTP Server for Metrics
warp = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Time & UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }

# HTTP Client (for billing)
reqwest = { version = "0.11", features = ["json"] }

# Configuration
config = "0.14"

# Python Bindings (Optional)
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

# Stream utilities
tokio-stream = { version = "0.1", features = ["sync"] }

# For Stream trait type erasure
futures-core = "0.3"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"

[features]
default = []
python-bindings = ["pyo3"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
